// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer should render message 1`] = `
<div>
  <Markdown
    text="Hello *world*!"
  />
</div>
`;

exports[`renderer should render message for array 1`] = `
<div>
  <Markdown
    text="Hello *world*!
Foo _bar_"
  />
</div>
`;
